api: add top endpoint
