# assisted_team/main.py
@@ -1,16 +1,12 @@
-from flask import Flask, escape, request, jsonify
+import datetime
+
+from flask import Flask, request, jsonify
 from flask_cors import CORS
 
 from core import TravelParser
 
 app = Flask(__name__)
 CORS(app)
-
-
-@app.route('/')
-def hello():
-    name = request.args.get("name", "World")
-    return f'Hello, {escape(name)}!'
 
 
 @app.route('/api/flights')
@@ -24,6 +20,40 @@ def flights():
     for travel in parser.parse_travels():
         result.append(travel.serialize())
     return jsonify(result)
+
+
+@app.route('/api/top')
+def top_flights():
+    # TODO: add currency_output parameter
+    criteria = request.args.get("criteria", "price")
+    sort = request.args.get("sort", "asc")
+
+    if criteria == 'price':
+        # TODO: add amount of persons as API parameter
+        criteria_getter = lambda x: x.calculate_price()
+    elif criteria == 'duration':
+        criteria_getter = lambda x: x.get_total_duration()
+    else:
+        criteria_getter = lambda x: x.get_suitability_index()
+
+    if sort == 'desc':
+        criteria_comparer = lambda x, y: x is None or x > y
+    else:
+        criteria_comparer = lambda x, y: x is None or x < y
+
+    best_travels = []
+    best_value = None
+    parser = TravelParser()
+    for travel in parser.parse_travels():
+        criteria_value = criteria_getter(travel)
+        if criteria_value == best_value:
+            best_travels.append(travel.serialize())
+        elif criteria_comparer(best_value, criteria_value):
+            best_travels = [travel.serialize()]
+            best_value = criteria_value
+    if isinstance(best_value, datetime.timedelta):
+        best_value = str(best_value)
+    return jsonify({'travels': best_travels, 'value': best_value})
 
 
 if __name__ == "__main__":
